changes to what we do

--- a/RMP-wordpress/wp-content/themes/RMP/less/ie-fix.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/ie-fix.less
@@ -1,5 +1,5 @@
 @import "stylesheets/base";
-@import "stylesheets/lesshat";
+@import "stylesheets/lesshat-prefixed";
 
 //PHONE
 @import "stylesheets/phone";
