--- a/RMP-wordpress/wp-content/themes/RMP/less/styles.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/styles.less
@@ -1,5 +1,5 @@
 @import "stylesheets/base";
-@import "stylesheets/lesshat";
+@import "stylesheets/lesshat-prefixed";
 
 //PHONE
 @import "stylesheets/phone";
@@ -17,5 +17,11 @@
 //FULL
 @media screen and (min-width: 1025px){
   @import "stylesheets/full";
+
+}
+
+//FULL LARGE
+@media screen and (min-width: 1500px){
+  @import "stylesheets/full-lg";
 
 }
