--- a/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/mini-tablet.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/mini-tablet.less
@@ -1,3 +1,165 @@
 /* --------------------------------------------------- *\
   MINI-TABLET
 \* --------------------------------------------------- */
+
+
+//SHARED
+
+
+//OFF-CANVAS NAV
+.st-menu{
+
+  .nav-wrapper{
+
+    .nav-logo{
+
+    }
+
+    #menu-main{
+
+      .menu-item{
+
+        a{
+
+          &:hover{
+
+          }
+        }
+
+        .sub-menu{
+
+          .menu-item{
+
+            a{
+
+              &:hover{
+
+              }
+            }
+          }
+        }
+      }
+
+      .menu-item-has-children{
+
+      }
+    }
+  }
+}
+
+.st-effect-6.st-menu-open .st-pusher {
+
+}
+
+
+
+//TEMPLATE
+
+
+
+.outer-container{
+
+}
+
+header{
+
+  .header-wrapper{
+
+    .left-header{
+
+      .header-logo{
+
+        img{
+
+        }
+      }
+
+      .nav-btn{
+
+        .menu-icon{
+
+          div{
+
+          }
+        }
+
+        .menu-title{
+
+        }
+      }
+    }
+
+    .right-header{
+
+      .header-contact{
+
+        a{
+
+          &.active{
+
+          }
+        }
+      }
+    }
+  }
+
+  .header-contact-links{
+
+    .contact-links-wrapper{
+
+      .contact-tip{
+
+        a{
+
+          &:hover{
+
+          }
+        }
+      }
+    }
+  }
+}
+
+section.main{
+
+}
+
+footer{
+
+}
+
+//HOME
+
+.home{
+
+  .outer-container{
+    padding: 5em 0 0;
+  }
+
+  .hero-container{
+    margin: 0 auto;
+    max-width: 28em;
+
+    .hero-logo{
+
+    }
+
+    .hero-slogan{
+      .font-size(1.4em,1.6em);
+    }
+  }
+
+  .home-nav{
+    max-width: 28em;
+    margin-top: 5em;
+
+    a{
+      .font-size(1.8em,1em);
+    }
+  }
+
+}
+
+/* --------------------------------------------------- *\
+  CROSSBROWSING
+\* --------------------------------------------------- */
