--- a/RMP-wordpress/wp-content/themes/RMP/css/component.css
+++ b/RMP-wordpress/wp-content/themes/RMP/css/component.css
@@ -42,7 +42,7 @@ body,
 	right: 0;
 	width: 0;
 	height: 0;
-	background: rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.5);
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
@@ -53,8 +53,8 @@ body,
 	width: 100%;
 	height: 100%;
 	opacity: 1;
-	-webkit-transition: opacity 0.5s;
-	transition: opacity 0.5s;
+	-webkit-transition: opacity 0.8s;
+	transition: opacity 0.8s;
 }
 
 .st-menu {
@@ -90,48 +90,20 @@ body,
 	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 }
 
-/* Effect 6: Rotate pusher */
-
-.st-effect-6.st-container {
-	-webkit-perspective: 1500px;
-	perspective: 1500px;
-}
-
-.st-effect-6 .st-pusher {
-	-webkit-transform-origin: 0% 50%;
-	transform-origin: 0% 50%;
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-}
-
-.st-effect-6.st-menu-open .st-pusher {
-	-webkit-transform: translate3d(300px, 0, 0) rotateY(-15deg);
-	transform: translate3d(300px, 0, 0) rotateY(-15deg);
-}
-
-.st-effect-6.st-menu {
+/* Effect 1: Slide in on top */
+.st-effect-1.st-menu {
+	visibility: visible;
 	-webkit-transform: translate3d(-100%, 0, 0);
 	transform: translate3d(-100%, 0, 0);
-	-webkit-transform-origin: 100% 50%;
-	transform-origin: 100% 50%;
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
 }
 
-.st-effect-6.st-menu-open .st-effect-6.st-menu {
+.st-effect-1.st-menu-open .st-effect-1.st-menu {
 	visibility: visible;
-	-webkit-transition: -webkit-transform 0.5s;
-	transition: transform 0.5s;
-	-webkit-transform: translate3d(-100%, 0, 0) rotateY(15deg);
-	transform: translate3d(-100%, 0, 0) rotateY(15deg);
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 }
 
-.st-effect-6.st-menu::after {
+.st-effect-1.st-menu::after {
 	display: none;
 }
 
-/* Fallback example for browsers that don't support 3D transforms (and no JS fallback) */
-.no-csstransforms3d .st-pusher,
-.no-js .st-pusher {
-	padding-left: 300px;
-}
