--- a/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
+++ b/RMP-wordpress/wp-content/themes/RMP/less/stylesheets/phone.less
@@ -14,8 +14,9 @@
 }
 
 .content-text{
-  .font-size(1.2em,1.6em);
+  .font-size(1.1em,1.6em);
   .source(300);
+  color: @lt-grey;
 }
 
 //OFF-CANVAS NAV
@@ -320,10 +321,17 @@ footer{
 
             .content{
               .content-text;
-              color: @lt-grey;
             }
 
             .video-gallery-outer{
+
+              .projects-title{
+                color: @lt-purple;
+                .font-size(1.3em,1em);
+                margin-top: 1.5em;
+                text-transform: uppercase;
+                text-align: left;
+              }
 
               .thumbs-container{
                 margin: .5em 0;
@@ -337,10 +345,17 @@ footer{
                   .thumb-item{
                     .inline(middle);
                     width: 5em;
+                    line-height: 0;
+                    .lh-opacity(0.7);
+                    .lh-transition(all .3s ease);
 
                     img{
                       width: 100%;
                       height: auto;
+                    }
+
+                    &.active{
+                      .lh-opacity(1.0);
                     }
                   }
                 }
@@ -354,6 +369,65 @@ footer{
 
                   .ps-scrollbar-x{
                     height: 5px;
+                  }
+                }
+              }
+
+              .project-details{
+
+                .blur-container{
+                  .lh-transition(all .3s ease);
+
+                  &.blurred{
+                    .lh-blur(5px);
+                    .lh-opacity(0.3);
+                  }
+                }
+
+                .project-item{
+
+                  .video-container{
+
+                  }
+
+                  .title{
+                    padding: 1em 0;
+                    margin: 0 0 .5em;
+                    border-bottom: 1px solid @lt-purple;
+
+                    h2{
+                      margin: 0;
+                      color: @lt-purple;
+                      .source(400);
+                      text-transform: uppercase;
+                      .font-size(1.3em,.8em);
+                    }
+                  }
+
+                  .info-container{
+
+                    .desc{
+                      .content-text;
+                    }
+
+                    &.w-logo{
+
+                      .client-logo{
+                        .inline();
+                        width: 20%;
+                        margin: .2em .2em 0 0;
+
+                        img{
+                          width: 100%;
+                          max-width: 100%;
+                        }
+                      }
+
+                      .desc{
+                        .inline();
+                        width: 77%;
+                      }
+                    }
                   }
                 }
               }
